[gd_scene load_steps=29 format=2]

[ext_resource path="res://ProficiencySelection.gd" type="Script" id=1]
[ext_resource path="res://assets/interfaces/character-select/background.png" type="Texture" id=2]
[ext_resource path="res://fonts/roboto_24.tres" type="DynamicFontData" id=3]
[ext_resource path="res://player1-prof-select-pane.gd" type="Script" id=4]
[ext_resource path="res://assets/interfaces/character-select/p1-selection-bgd.png" type="Texture" id=5]
[ext_resource path="res://Star.tscn" type="PackedScene" id=6]
[ext_resource path="res://interface/cursor.tscn" type="PackedScene" id=7]
[ext_resource path="res://input_manager.gd" type="Script" id=8]
[ext_resource path="res://assets/interfaces/combo/checkmark-transparent.png" type="Texture" id=9]
[ext_resource path="res://assets/interfaces/character-select/p2-selection-bgd.png" type="Texture" id=10]
[ext_resource path="res://assets/interfaces/command-input/xbox-buttons/x.png" type="Texture" id=11]
[ext_resource path="res://assets/interfaces/command-input/xbox-buttons/y.png" type="Texture" id=12]
[ext_resource path="res://assets/interfaces/command-input/l2.png" type="Texture" id=13]
[ext_resource path="res://assets/interfaces/command-input/xbox-buttons/a.png" type="Texture" id=14]
[ext_resource path="res://assets/interfaces/command-input/right.png" type="Texture" id=15]
[ext_resource path="res://assets/interfaces/command-input/down.png" type="Texture" id=16]
[ext_resource path="res://assets/interfaces/command-input/xbox-buttons/b.png" type="Texture" id=17]
[ext_resource path="res://interface/back-arrow.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/interfaces/proficiencies/icons/arcobatics.png" type="Texture" id=19]
[ext_resource path="res://assets/interfaces/proficiencies/icons/defender.png" type="Texture" id=20]
[ext_resource path="res://assets/interfaces/proficiencies/icons/offensive-mastery.png" type="Texture" id=21]
[ext_resource path="res://assets/interfaces/proficiencies/icons/ability-cancel.png" type="Texture" id=22]
[ext_resource path="res://assets/interfaces/proficiencies/icons/generalist.png" type="Texture" id=23]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 23
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 23
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 23
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="ProficiencySelection" type="Control"]
script = ExtResource( 1 )

[node name="bgd" type="TextureRect" parent="."]
margin_left = -185.0
margin_top = 28.0
margin_right = 1735.0
margin_bottom = 1108.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="title" type="Label" parent="."]
margin_left = 225.0
margin_top = 62.0
margin_right = 694.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Proficency Selection"

[node name="player1-pane" type="Control" parent="."]
margin_top = 35.0
margin_right = 40.0
margin_bottom = 75.0
script = ExtResource( 4 )

[node name="player1-bgd" type="TextureRect" parent="player1-pane"]
margin_left = 636.0
margin_top = 94.0
margin_right = 887.0
margin_bottom = 278.0
rect_scale = Vector2( 1.4, 1.2 )
texture = ExtResource( 5 )

[node name="advantage-star" parent="player1-pane" instance=ExtResource( 6 )]
margin_left = 666.0
margin_top = 121.0
margin_right = 791.0
margin_bottom = 161.0

[node name="cursor" parent="player1-pane/advantage-star" instance=ExtResource( 7 )]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 0 )
rotation = 4.71239
scale = Vector2( 0.5, 0.5 )
z_index = 5
offset = Vector2( 100, 115 )
horizontal = false

[node name="disadvantage-star" parent="player1-pane" instance=ExtResource( 6 )]
margin_left = 814.0
margin_top = 123.0
margin_right = 939.0
margin_bottom = 163.0

[node name="cursor" parent="player1-pane/disadvantage-star" instance=ExtResource( 7 )]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 0 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
z_index = 5
offset = Vector2( 100, 115 )
horizontal = false

[node name="inputManager" type="Node" parent="player1-pane"]
script = ExtResource( 8 )

[node name="player-label" type="Label" parent="player1-pane"]
margin_left = 520.0
margin_top = 157.0
margin_right = 596.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.0235294, 0.0235294, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Player 1"

[node name="readyIcon" type="TextureRect" parent="player1-pane/player-label"]
visible = false
margin_left = 12.0
margin_top = 46.0
margin_right = 238.0
margin_bottom = 272.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )

[node name="advantage" type="Label" parent="player1-pane"]
margin_left = 653.0
margin_top = 263.0
margin_right = 751.0
margin_bottom = 287.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Advantage"

[node name="disadvantage" type="Label" parent="player1-pane"]
margin_left = 822.0
margin_top = 266.0
margin_right = 946.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Disadvantage"

[node name="player2-pane" type="Control" parent="."]
margin_left = 490.0
margin_top = 40.0
margin_right = 530.0
margin_bottom = 80.0
script = ExtResource( 4 )
inputDeviceId = "P2"

[node name="player2-bdg" type="TextureRect" parent="player2-pane"]
margin_left = 145.0
margin_top = 327.0
margin_right = 396.0
margin_bottom = 511.0
rect_scale = Vector2( 1.4, 1.2 )
texture = ExtResource( 10 )

[node name="advantage-star" parent="player2-pane" instance=ExtResource( 6 )]
margin_left = 181.0
margin_top = 356.0
margin_right = 306.0
margin_bottom = 396.0

[node name="cursor" parent="player2-pane/advantage-star" instance=ExtResource( 7 )]
modulate = Color( 0.00784314, 0, 1, 1 )
position = Vector2( 0, 0 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
z_index = 5
offset = Vector2( 100, 115 )
horizontal = false

[node name="disadvantage-star" parent="player2-pane" instance=ExtResource( 6 )]
margin_left = 329.0
margin_top = 358.0
margin_right = 454.0
margin_bottom = 398.0

[node name="cursor" parent="player2-pane/disadvantage-star" instance=ExtResource( 7 )]
visible = false
modulate = Color( 0.00784314, 0, 1, 1 )
position = Vector2( 0, 0 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
z_index = 5
offset = Vector2( 100, 115 )
horizontal = false

[node name="inputManager" type="Node" parent="player2-pane"]
script = ExtResource( 8 )

[node name="player-label" type="Label" parent="player2-pane"]
margin_left = 30.0
margin_top = 360.0
margin_right = 106.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0862745, 0, 0.847059, 1 )
text = "Player 2"

[node name="readyIcon" type="TextureRect" parent="player2-pane/player-label"]
visible = false
margin_left = 9.0
margin_top = 28.0
margin_right = 235.0
margin_bottom = 254.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )

[node name="advantage" type="Label" parent="player2-pane"]
margin_left = 182.0
margin_top = 509.0
margin_right = 280.0
margin_bottom = 533.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Advantage"

[node name="disadvantage" type="Label" parent="player2-pane"]
margin_left = 341.0
margin_top = 505.0
margin_right = 465.0
margin_bottom = 529.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Disadvantage"

[node name="ripost" type="Label" parent="."]
visible = false
margin_left = 118.0
margin_top = 121.0
margin_right = 249.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Riposting / Mind games"

[node name="bar" type="Label" parent="."]
margin_left = 114.0
margin_top = 184.0
margin_right = 449.0
margin_bottom = 249.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "        Ability Bar 
Canceling Combos"

[node name="random" type="Label" parent="."]
margin_left = 166.0
margin_top = 482.0
margin_right = 501.0
margin_bottom = 513.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Random"

[node name="damage" type="Label" parent="."]
margin_left = 113.0
margin_top = 277.0
margin_right = 383.0
margin_bottom = 308.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Offensive Mastery"

[node name="unselect" type="Label" parent="."]
margin_left = 322.0
margin_top = 539.0
margin_right = 467.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Unselect"

[node name="none" type="Label" parent="."]
margin_left = 153.0
margin_top = 128.0
margin_right = 425.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Generalist "

[node name="acrobatics" type="Label" parent="."]
margin_left = 164.0
margin_top = 409.0
margin_right = 436.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Acrobatics"

[node name="defender" type="Label" parent="."]
margin_left = 170.0
margin_top = 343.0
margin_right = 442.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Defender"

[node name="X-btn" type="TextureRect" parent="."]
margin_left = 67.0
margin_top = 184.0
margin_right = 117.0
margin_bottom = 231.0
texture = ExtResource( 11 )

[node name="Y-btn" type="TextureRect" parent="."]
margin_left = 68.0
margin_top = 270.0
margin_right = 118.0
margin_bottom = 317.0
texture = ExtResource( 12 )

[node name="l2-btn" type="TextureRect" parent="."]
margin_left = 48.0
margin_top = 474.0
margin_right = 133.0
margin_bottom = 521.0
texture = ExtResource( 13 )

[node name="left-btn" type="TextureRect" parent="."]
margin_left = 73.3384
margin_top = 127.331
margin_right = 160.338
margin_bottom = 174.331
texture = ExtResource( 14 )

[node name="right-btn" type="TextureRect" parent="."]
margin_left = 64.0
margin_top = 407.0
margin_right = 149.0
margin_bottom = 490.0
texture = ExtResource( 15 )

[node name="down-btn" type="TextureRect" parent="."]
margin_left = 52.499
margin_top = 339.0
margin_right = 139.499
margin_bottom = 422.0
texture = ExtResource( 16 )

[node name="back-btn" type="TextureRect" parent="."]
margin_left = 272.987
margin_top = 531.501
margin_right = 359.987
margin_bottom = 601.501
texture = ExtResource( 17 )

[node name="back-arrow" parent="." instance=ExtResource( 18 )]
margin_left = 43.0
margin_top = 540.0
margin_right = 188.0
margin_bottom = 668.0

[node name="acrobatics-icon" type="TextureRect" parent="."]
margin_left = 343.0
margin_top = 394.0
margin_right = 423.0
margin_bottom = 474.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 19 )

[node name="defender-icon" type="TextureRect" parent="."]
margin_left = 337.0
margin_top = 326.0
margin_right = 417.0
margin_bottom = 406.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 20 )

[node name="offesive-mastery-icon" type="TextureRect" parent="."]
margin_left = 337.0
margin_top = 264.0
margin_right = 417.0
margin_bottom = 344.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 21 )

[node name="ability-canceling-icon" type="TextureRect" parent="."]
margin_left = 337.0
margin_top = 178.0
margin_right = 417.0
margin_bottom = 258.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 22 )

[node name="generalist-icon" type="TextureRect" parent="."]
margin_left = 336.0
margin_top = 116.0
margin_right = 416.0
margin_bottom = 196.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 23 )
